# ai-change-btc

./: .gitignore  README.md  config.example.toml  pyproject.toml
deploy/: bootstrap_google_cloud_vm.sh  crypto-whale-radar.service  google-cloud.env.example  install_google_cloud_vm.sh
docs/: adaptive-entry-strategy.md  chien-luoc-he-thong-vn.md  execution-cost-guard.md  github-x-trading-research.md  gitlab-trading-research.md  google-cloud-free-tier-deploy.md  high-winrate-entry-plan-2026-06-21.md  ke-hoach-vao-lenh-vn.md  learner-weight-parameters-vn.md  polymarket-quant-bot-research-2026-06-21.md  research.md  smart-money-clusters.md  video-inspired-roadmap.md
src/whale_signal_lab/: __init__.py  __main__.py  app.py  backtesting.py  config.py  features.py  learning.py  models.py  notifications.py  paper.py  signals.py  smart_money.py  web_server.py
src/whale_signal_lab/adapters/: __init__.py  binance.py  binance_futures.py  demo.py  etherscan.py
tests/: test_backtesting.py  test_binance_futures.py  test_learning.py  test_notifications.py  test_paper_exchange.py  test_signal_engine.py  test_smart_money.py
web/: index.html
