[project]
name = "whale-signal-lab"
version = "0.1.0"
description = "Realtime whale-flow signal lab with Binance market data and paper trading."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
realtime = [
  "websockets>=12.0",
]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

